# ididi

./: .gitignore  404.html  CHANGELOG.md  Digraph.gv  README.md  benchmark.py  blueprint.py  dev-plan.md  docker-compose.yml  illustrate.py  index.html  makefile  mkdocs.yml  pcss.md  pyproject.toml  roadmap.md  script.py  setup.py  setuptools.py  test_importing_error.py  type_test.py  visual.ipynb
.github/workflow/: ci.yml
.github/workflows/: build_wheels.yml  ci.yml  coverage.yml  release.yml
.pixi/envs/default/conda-meta/: bzip2-1.0.8-h4bc722e_7.json  libffi-3.4.2-h7f98852_5.json  libgcc-14.2.0-h77fa898_1.json  libnsl-2.0.1-hd590300_0.json  libsqlite-3.47.0-hadc24fc_0.json  libuuid-2.38.1-h0b41bf4_0.json  ncurses-6.5-he02047a_1.json  openssl-3.3.2-hb9d3cd8_0.json  pixi  pixi_env_prefix  python-3.12.0-hab00c5b_0_cpython.json  readline-8.2-h8228510_1.json  tk-8.6.13-noxft_h4845f30_101.json  tzdata-2024b-hc8b5060_0.json  xz-5.2.6-h166bdaf_0.json
.pixi/envs/default/share/terminfo/a/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
.pixi/envs/default/share/terminfo/c/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
.pixi/envs/default/share/terminfo/d/: ddr  dec-vt220
.pixi/envs/default/share/terminfo/e/: emu-220
.pixi/envs/default/share/terminfo/g/: go140  go140w  go225
.pixi/envs/default/share/terminfo/h/: hazel  hp2392  hp2641a  hp300h  hp700-wy  hp9845  hp98550  hpex  hpsub
.pixi/envs/default/share/terminfo/i/: ims-ansi
.pixi/envs/default/share/terminfo/k/: kt7
.pixi/envs/default/share/terminfo/m/: mai  mt4520-rv
.pixi/envs/default/share/terminfo/n/: ncsa  ncsa-m  ncsa-m-ns  ncsa-ns  ncsa-vt220  netbsd6  news-29  news-29-euc  news-29-sjis  news-33  news-33-euc  news-33-sjis  news-42  news-42-euc  news-42-sjis  news-old-unk  news-unk  news28  news29  nwp512  nwp512-a  nwp513  nwp513-a  nwp517  nwp517-w
.pixi/envs/default/share/terminfo/o/: opus3n1+  otek4115
.pixi/envs/default/share/terminfo/p/: pcmw  pcvt25  pcvt25-color  pcvt25w  pcvt28  pcvt28w  pcvt35  pcvt35w  pcvt40  pcvt40w  pcvt43  pcvt43w  pcvt50  pcvt50w  pcvtXX
.pixi/envs/default/share/terminfo/t/: ti916  ti916-132  ti916-8  tvi9065  (+34 more)
.pixi/envs/publish/conda-meta/: _libgcc_mutex-0.1-conda_forge.json  libexpat-2.6.3-h5888daf_0.json  libffi-3.4.2-h7f98852_5.json  libgcc-ng-14.2.0-h69a702a_1.json  libnsl-2.0.1-hd590300_0.json  libsqlite-3.47.0-hadc24fc_0.json  libuuid-2.38.1-h0b41bf4_0.json  libzlib-1.3.1-hb9d3cd8_2.json  ncurses-6.5-he02047a_1.json  openssl-3.3.2-hb9d3cd8_0.json  pixi  pixi_env_prefix  python-3.12.0-hab00c5b_0_cpython.json  readline-8.2-h8228510_1.json  tk-8.6.13-noxft_h4845f30_101.json  xz-5.2.6-h166bdaf_0.json
.pixi/solve-group-envs/default/conda-meta/: _openmp_mutex-4.5-2_gnu.json  ca-certificates-2024.8.30-hbcca054_0.json  colorama-0.4.6-pyhd8ed1ab_0.json  exceptiongroup-1.2.2-pyhd8ed1ab_0.json  iniconfig-2.0.0-pyhd8ed1ab_0.json  ld_impl_linux-64-2.43-h712a8e2_2.json  libffi-3.4.2-h7f98852_5.json  libgomp-14.2.0-h77fa898_1.json  libnsl-2.0.1-hd590300_0.json  libsqlite-3.47.0-hadc24fc_0.json  libuuid-2.38.1-h0b41bf4_0.json  ncurses-6.5-he02047a_1.json  openssl-3.3.2-hb9d3cd8_0.json  packaging-24.1-pyhd8ed1ab_0.json  pixi_env_prefix  pluggy-1.5.0-pyhd8ed1ab_0.json  pytest-8.3.3-pyhd8ed1ab_0.json  python-3.12.0-hab00c5b_0_cpython.json  readline-8.2-h8228510_1.json  tk-8.6.13-noxft_h4845f30_101.json  tomli-2.0.2-pyhd8ed1ab_0.json  xz-5.2.6-h166bdaf_0.json
FAQ/: index.html
bugs/scope_issues/: index.html
didi/: errors.py  graph.py  node.py
didi/utils/: pretty_utils.py
docs/: FAQ.md  features.md  index.md  introduction.md  openclosed.md  performance.md  tutorial.md
docs/bugs/: scope_issues.md
docs/examples/: fastapi.py  reflect.py
examples/: contrast.py  fastapi.py  java.py  reflect.py  three_types.py
features/: index.html
ididi/: __init__.py  _ds.pxd  _ds.py  _itypes.py  _node.pxd  _node.py  _type_resolve.py  api.py  config.py  errors.py  graph.c  graph.html  graph.pxd  graph.py  graph.pyi  graph.pyx  interfaces.py  node.py  registry.py  resolve.pxd  resolve.pyi  resolve.pyx  type_resolve.py  types.py  visual.py
ididi/utils/: param_utils.py  pretty_utils.py  typing_utils.py
introduction/: index.html
openclosed/: index.html
performance/: index.html
publish/: ididi-1.6.0-py3-none-any.whl
search/: search_index.json
tests/: test_autodt.py  test_benchmark.py  test_bug_fixes.py  test_complex_graph.py  test_config.py  test_data.py  test_deprecations.py  test_dt.py  test_feat.py  test_forwardref.py  test_graph.py  test_graph_additional.py  test_node.py  test_profile.py  test_resource.py  test_scope.py  test_slots.py  test_type_resolve.py  test_typing_utils_eval_type.py  test_visual.py
tests/features/: services.py  test_apis.py  test_async_gen_factory.py  test_context_scope.py  test_dg_self_inject.py  test_entry.py  test_feat.py  test_forwardref.py  test_func_check.py  test_graph_build_node.py  test_graph_entry.py  test_graph_merge.py  test_ignore.py  test_improved_error.py  test_inject.py  test_lazynode.py  test_new_type.py  test_node_ignore.py  test_nonreuse_trans.py  test_override.py  test_partial_resolve.py  test_resolve_function.py  test_resource.py  test_reuse.py  test_scope.py  test_static_resolve.py  test_theading.py  test_threading.py  test_typing_support.py  test_visitor.py  test_visual.py
tests/regresion/: test_bug_fixes.py  test_circualr_dep.py  test_facotry_return_generic.py  test_forward_abstarct.py
tests/regression/: test_acm_with_factory.py  test_bug_fixes.py  test_circualr_dep.py  test_facotry_return_generic.py  test_factory_union_type.py  test_forward_abstarct.py  test_graph_scope_resolve.py  test_registered_singleton_should_be_scoped.py  test_resolve_factory.py  test_scope_not_found.py  test_slots.py  test_static_resolve_all.py  test_subclass_of_protocol.py  test_threading.py
tests/versions/: test_v1_4_3.py  test_v1_4_4.py  test_v1_4_5.py  test_v1_5_1.py  test_v1_5_2.py  test_v1_5_5.py  test_v1_6_1.py  test_v1_6_2.py  test_v1_7_6.py  test_v1_7_7.py  test_v_1_7_9.py  test_v_1_8_5.py
tutorial/: index.html
(+338 files in other folders)
